Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test0.java
/*
Test0
Objetivo: Detectar que la clase esta mal formada.

*/

cla {

}